docker: enable JVM memory limit with cgroups